--- a/.coveragerc
+++ b/.coveragerc
@@ -1,13 +1,7 @@
 [run]
+branch = True
 source = src
-omit = 
-    */__init__.py
-    */api/*
-    */infrastructure/*
 
 [report]
-exclude_lines =
-    pragma: no cover
-    def __repr__
-    if __name__ == .__main__.:
-    pass
+show_missing = True
+skip_empty = True
